Insert a contact using an argument in CLI
added chalk, validator, yargs to dependencies in package.json
remake app.js
delete writeQuestion function in contacts.js
delete readline module in contacts.js
update insertContact function with validation in it in contacts.js

--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "validator": "^13.6.0",
+    "yargs": "^17.1.0"
   }
 }
